--- a/scss/estiloindex.scss
+++ b/scss/estiloindex.scss
@@ -26,7 +26,7 @@ $cardFtr: all 0.2s ease-in;//transición para cardflyer
 %ahover {
   color: $amarillo;
   text-decoration: underline;
-  background: linear-gradient ($grisclaro, $grisoscuro);
+  background-color: $grisoscuro;
   transform: scale(1.2, 1.2);
   }
 
@@ -82,7 +82,7 @@ $cardFtr: all 0.2s ease-in;//transición para cardflyer
           background: $hueso;
           margin-top: 50px;
           transition: $cardFtr;
-          box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.40);
+          box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.80);
 
           p {
             margin-top: 10px;
@@ -125,7 +125,7 @@ $cardFtr: all 0.2s ease-in;//transición para cardflyer
   }   
   .cardFlyer:hover {
     background: #fff;
-    box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
+    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.60);
     transition: $cardFtr;
     margin-top: 50px;
 
