agrgego pag 404 con estilo, actualizo README y ajustes de estilo

--- a/css/estiloprueba.css
+++ b/css/estiloprueba.css
@@ -4,7 +4,7 @@ p a, .sucursales {
   margin-left: 1%;
   text-align: center; }
 
-p a:hover, #cardHome .container .cardFlyer a:hover, body #nav2 ul li a:hover, body footer .containerFooter #foot #foot a:hover {
+p a:hover, #cardHome .container .cardFlyer a:hover, body #nav2 ul li a:hover, body footer .containerFooter #foot a:hover {
   color: #ffc800;
   text-decoration: underline;
   background-color: #463f3a;
@@ -127,12 +127,21 @@ p a:hover {
         animation-iteration-count: 1;
         animation-timing-function: ease-in;
         animation-duration: 2s;
-        animation-delay: 1s; }
+        animation-delay: 2s; }
+    .bodyCafe .containerCafes .tipo1 {
+      background-color: rgba(255, 255, 255, 0.5);
+      margin: 2vw;
+      box-shadow: 3px 3px 6px black;
+      animation-name: animacion;
+      animation-iteration-count: 1;
+      animation-timing-function: ease-in;
+      animation-duration: 3s;
+      animation-delay: 1s; }
 
 @keyframes animacion {
   0% {
     opacity: 0;
-    transform: translateX(-100vw) skewX(70deg); }
+    transform: translateY(-100vw) skewX(70deg); }
   60% {
     opacity: 1;
     transform: skewX(-20deg); }
@@ -192,13 +201,143 @@ p a, .sucursales {
     color: #463f3a;
     font-weight: bold; } }
 
+#notFound {
+  background: linear-gradient(30deg, black 0%, #463f3a 25%, #8a8883 50%, #463f3a 75%, black 100%);
+  color: #f4f3ee;
+  overflow: hidden;
+  height: 100%;
+  user-select: none; }
+
+.error {
+  text-align: center;
+  font-family: 'montserrat alternates';
+  font-size: 95px;
+  font-style: italic;
+  text-align: center;
+  width: 100px;
+  height: 60px;
+  line-height: 60px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -60px;
+  right: 0;
+  animation: noise 2s linear infinite;
+  overflow: default; }
+
+.error:after {
+  content: '404';
+  font-family: 'montserrat alternates';
+  font-size: 100px;
+  font-style: italic;
+  text-align: center;
+  width: 150px;
+  height: 60px;
+  line-height: 60px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  color: #ffc800;
+  animation: noise-1 .2s linear infinite; }
+
+.info {
+  text-align: center;
+  font-family: 'Montserrat';
+  font-size: 15px;
+  font-style: italic;
+  text-align: center;
+  width: 200px;
+  height: 60px;
+  line-height: 60px;
+  margin: auto;
+  position: absolute;
+  top: 140px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  animation: noise-3 1s linear infinite; }
+
+.error:before {
+  content: '404';
+  font-family: 'montserrat alternates';
+  font-size: 100px;
+  font-style: italic;
+  text-align: center;
+  width: 100px;
+  height: 60px;
+  line-height: 60px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  color: #ffc800;
+  animation: noise-2 .2s linear infinite; }
+
+@keyframes noise-1 {
+  0%, 20%, 40%, 60%, 70%, 90% {
+    opacity: 0; }
+  10% {
+    opacity: .1; }
+  50% {
+    opacity: .5;
+    left: -6px; }
+  80% {
+    opacity: .3; }
+  100% {
+    opacity: .6;
+    left: 2px; } }
+
+@keyframes noise-2 {
+  0%, 20%, 40%, 60%, 70%, 90% {
+    opacity: 0; }
+  10% {
+    opacity: .1; }
+  50% {
+    opacity: .5;
+    left: 6px; }
+  80% {
+    opacity: .3; }
+  100% {
+    opacity: .6;
+    left: -2px; } }
+
+@keyframes noise {
+  0%, 3%, 5%, 42%, 44%, 100% {
+    opacity: 1;
+    transform: scaleY(1); }
+  4.3% {
+    opacity: 1;
+    transform: scaleY(1.7); }
+  43% {
+    opacity: 1;
+    transform: scaleX(1.5); } }
+
+@keyframes noise-3 {
+  0%, 3%, 5%, 42%, 44%, 100% {
+    opacity: 1;
+    transform: scaleY(1); }
+  4.3% {
+    opacity: 1;
+    transform: scaleY(4); }
+  43% {
+    opacity: 1;
+    transform: scaleX(10) rotate(60deg); } }
+
 p a, .sucursales {
   color: #f4f3ee;
   font-family: "montserrat";
   margin-left: 1%;
   text-align: center; }
 
-p a:hover, #cardHome .container .cardFlyer a:hover, body #nav2 ul li a:hover, body footer .containerFooter #foot #foot a:hover {
+p a:hover, #cardHome .container .cardFlyer a:hover, body #nav2 ul li a:hover, body footer .containerFooter #foot a:hover {
   color: #ffc800;
   text-decoration: underline;
   background-color: #463f3a;
