--- a/css/estiloprueba.css
+++ b/css/estiloprueba.css
@@ -56,10 +56,13 @@ p a:hover {
     padding-bottom: 5vw; }
     #cardHome .container .cardFlyer {
       border-radius: 5px;
+      width: 100%;
       background: #f4f3ee;
       margin-top: 50px;
       transition: all 0.2s ease-in;
       box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.8); }
+      #cardHome .container .cardFlyer img {
+        width: 100%; }
       #cardHome .container .cardFlyer p {
         margin-top: 10px;
         margin-bottom: 10px;
@@ -94,59 +97,68 @@ p a:hover {
       opacity: 0.7;
       transform: scale(1.15); }
 
-.bodyCafe {
-  background-image: url("fondocafe2.jpg");
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover; }
-  .bodyCafe .intro h2 {
-    font-size: 1.6rem;
-    font-weight: lighter;
-    padding-top: 5%;
-    color: #8a8883;
-    text-transform: uppercase;
-    font-family: "montserrat";
-    text-align: center;
-    text-shadow: 2px 2px 3px; }
-  .bodyCafe .containerCafes {
-    margin-bottom: 4vw;
-    padding: 5vw;
-    justify-content: space-around;
-    align-items: center; }
-    .bodyCafe .containerCafes .tipo {
-      background-color: rgba(255, 255, 255, 0.5);
-      margin: 2vw;
-      box-shadow: 3px 3px 6px black;
-      animation-name: animacion;
-      animation-iteration-count: 1;
-      animation-timing-function: ease-in;
-      animation-duration: 3s;
-      animation-delay: 0s; }
-      .bodyCafe .containerCafes .tipo h3 {
-        animation-name: animacion;
-        animation-iteration-count: 1;
-        animation-timing-function: ease-in;
-        animation-duration: 2s;
-        animation-delay: 2s; }
-    .bodyCafe .containerCafes .tipo1 {
-      background-color: rgba(255, 255, 255, 0.5);
-      margin: 2vw;
-      box-shadow: 3px 3px 6px black;
-      animation-name: animacion;
-      animation-iteration-count: 1;
-      animation-timing-function: ease-in;
-      animation-duration: 3s;
-      animation-delay: 1s; }
+.intro h2 {
+  font-size: 1.6rem;
+  font-weight: normal;
+  padding-top: 5%;
+  color: #8a8883;
+  text-transform: uppercase;
+  font-family: "montserrat";
+  text-align: center;
+  text-shadow: 2px 2px 3px; }
 
-@keyframes animacion {
-  0% {
-    opacity: 0;
-    transform: translateY(-100vw) skewX(70deg); }
-  60% {
-    opacity: 1;
-    transform: skewX(-20deg); }
-  80% {
-    transform: skewX(15deg); } }
+.containerCafes {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 4vw;
+  padding: 5vw;
+  justify-content: space-around;
+  align-items: center; }
+  .containerCafes .flipCard {
+    background-color: transparent;
+    width: 30%;
+    height: 26vw;
+    perspective: 1000px;
+    margin: 2vw 1vw; }
+    .containerCafes .flipCard .flipCardInner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+      box-shadow: 8px 6px 10px rgba(0, 0, 0, 0.5); }
+      .containerCafes .flipCard .flipCardInner .flipCardFront, .containerCafes .flipCard .flipCardInner .flipCardBack {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden; }
+      .containerCafes .flipCard .flipCardInner .flipCardFront {
+        background-color: black;
+        color: white; }
+        .containerCafes .flipCard .flipCardInner .flipCardFront h3 {
+          font-size: 1.8vw;
+          font-family: "montserrat";
+          letter-spacing: 1vw; }
+      .containerCafes .flipCard .flipCardInner .flipCardBack {
+        background-color: black;
+        color: #8a8883;
+        transform: rotateY(180deg);
+        text-align: center;
+        padding: 2vw 1vw; }
+        .containerCafes .flipCard .flipCardInner .flipCardBack p {
+          font-size: 2vw; }
+
+.flipCard:hover .flipCardInner {
+  transform: rotateY(180deg); }
+
+@media screen and (max-width: 768px) {
+  .flipCard {
+    min-width: 40%;
+    min-height: 35vw;
+    padding: 1vw; }
+    .flipCard .nombre {
+      font-size: 2vw; } }
 
 .row {
   display: flex;
