--- a/scss/estilocafe.scss
+++ b/scss/estilocafe.scss
@@ -15,16 +15,12 @@ $color5:rgba(79, 72, 49, 0.6);
 }
 
 
-.bodyCafe{
-  background-image: url("fondocafe2.jpg");
-  height:100%;
-  background-repeat: no-repeat;
-  background-size: cover;
+
    
 
    .intro{
     h2{
-        @include apariencia (1.6rem, lighter, 5%, $grisclaro, uppercase);
+        @include apariencia (1.6rem, normal, 5%, $grisclaro, uppercase);
         font-family: "montserrat";
         text-align: center;
         text-shadow: 2px 2px 3px;
@@ -32,56 +28,78 @@ $color5:rgba(79, 72, 49, 0.6);
     
    }
 
-  .containerCafes{
-    margin-bottom: 4vw;
-    padding: 5vw;
-    justify-content: space-around;
-    align-items: center;
-    
-    .tipo{
-      background-color: rgba(255,255,255, 0.5);
-      margin:2vw;
-      box-shadow: 3px 3px 6px black;
-      animation-name: animacion;
-      animation-iteration-count: 1;
-      animation-timing-function: ease-in;
-      animation-duration: 3s;
-      animation-delay: 0s;
+ 
+  .containerCafes {
+  display:flex;
+  flex-wrap: wrap;
+  margin-bottom: 4vw;
+  padding: 5vw;
+  justify-content: space-around;
+  align-items: center;
+ 
+    .flipCard {
+    background-color: transparent;
+    width: 30%;
+    height: 26vw;
+    perspective: 1000px;
+    margin:2vw 1vw;
 
-      h3{
-        animation-name: animacion;
-        animation-iteration-count: 1;
-        animation-timing-function: ease-in;
-        animation-duration: 2s;
-        animation-delay: 2s;
-      }
-      }
-      .tipo1{
-      background-color: rgba(255,255,255, 0.5);
-      margin:2vw;
-      box-shadow: 3px 3px 6px black;
-      animation-name: animacion;
-      animation-iteration-count: 1;
-      animation-timing-function: ease-in;
-      animation-duration: 3s;
-      animation-delay: 1s;
+    .flipCardInner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+      box-shadow:8px 6px 10px rgba(0,0,0,0.5);
 
-     
-      }
-    }
-  }
+        .flipCardFront, .flipCardBack {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          backface-visibility: hidden;
+        }
+        .flipCardFront {
+          background-color: black;
+          color: white;
 
-@keyframes animacion {
- 0% {
-    opacity: 0;
-    transform: translateY(-100vw) skewX(70deg);
-  }
-  60% {
-    opacity: 1;
-    transform: skewX(-20deg);
-  }
-  80% {
-    transform: skewX(15deg);
+          h3{
+            font-size: 1.8vw;
+            font-family: "montserrat";
+            letter-spacing: 1vw;
+          }
+        }
+        .flipCardBack {
+          background-color: black;
+          color: $grisclaro;
+          transform: rotateY(180deg);
+          text-align: center;
+          padding: 2vw 1vw;
+
+          p{
+            font-size: 2vw;
+          }
+        }
+
+    } 
   }
 }
-  
+
+    .flipCard:hover .flipCardInner {
+      transform: rotateY(180deg); 
+    }
+
+@media screen and (max-width: 768px) {
+  .flipCard{
+    min-width: 40%;
+    min-height: 35vw;
+    padding: 1vw;
+      
+      .nombre{
+        font-size: 2vw;
+      }
+      // .flipCardBack{
+      //   font-size: 2.5vw;
+      // }
+  }
+}
