--- a/scss/estilocafe.scss
+++ b/scss/estilocafe.scss
@@ -14,44 +14,39 @@ $color5:rgba(79, 72, 49, 0.6);
   text-transform: $text-transform;
 }
 
-
-
-   
-
-   .intro{
+  .intro{
     h2{
-        @include apariencia (1.6rem, normal, 5%, $grisclaro, uppercase);
-        font-family: "montserrat";
-        text-align: center;
-        text-shadow: 2px 2px 3px;
+      @include apariencia (1.6rem, normal, 5%, $grisclaro, uppercase);
+      font-family: "montserrat";
+      text-align: center;
+      text-shadow: 2px 2px 3px;
     }
     
-   }
-
+  }
  
   .containerCafes {
-  display:flex;
-  flex-wrap: wrap;
-  margin-bottom: 4vw;
-  padding: 5vw;
-  justify-content: space-around;
-  align-items: center;
+    display:flex;
+    flex-wrap: wrap;
+    margin-bottom: 4vw;
+    padding: 5vw;
+    justify-content: space-around;
+    align-items: center;
  
     .flipCard {
-    background-color: transparent;
-    width: 30%;
-    height: 26vw;
-    perspective: 1000px;
-    margin:2vw 1vw;
+      background-color: transparent;
+      width: 30%;
+      height: 26vw;
+      perspective: 1000px;
+      margin: 4vw 1vw;
 
-    .flipCardInner {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
-      box-shadow:8px 6px 10px rgba(0,0,0,0.5);
+      .flipCardInner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
+        box-shadow:8px 6px 10px rgba(0,0,0,0.5);
 
         .flipCardFront, .flipCardBack {
           position: absolute;
@@ -77,29 +72,25 @@ $color5:rgba(79, 72, 49, 0.6);
           padding: 2vw 1vw;
 
           p{
-            font-size: 2vw;
+            @include apariencia(2vw, light, 0.5vw, $hueso, none);
           }
         }
-
-    } 
-  }
-}
-
-    .flipCard:hover .flipCardInner {
-      transform: rotateY(180deg); 
+      } 
     }
+  }
+
+  .flipCard:hover .flipCardInner {
+    transform: rotateY(180deg); 
+  }
 
 @media screen and (max-width: 768px) {
   .flipCard{
     min-width: 40%;
     min-height: 35vw;
-    padding: 1vw;
-      
-      .nombre{
-        font-size: 2vw;
-      }
-      // .flipCardBack{
-      //   font-size: 2.5vw;
-      // }
+    padding: 1vw;    
+  }
+   
+  .flipCard:hover .flipCardInner {
+    transform: rotateY(180deg) scale(1.45);
   }
 }
